# djangocourse

./: .env.docker  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  mailgun_test.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: admin.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_article_word_count.py  0003_auto_20250122_1702.py  0004_article_creator.py  0005_alter_article_content_alter_article_created_at_and_more.py  0006_alter_userprofile_managers_alter_userprofile_email.py
djangocourse/: asgi.py  settings.py  urls.py  wsgi.py
locale/es/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/app/layouts/: base_form.html
tests/: conftest.py  test_articles.py  test_homepage.py  test_signup.py
tests/pages/: auth.py
