[tool.poetry]
name = "python-startup"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "~3.12"
django = "5.0.7"
django-allauth = {extras = ["socialaccount"], version = "^65.3.1"}
requests = "^2.32.3"
psycopg = "^3.2.4"
dj-database-url = "^0.5.0"
django-widget-tweaks = "^1.5.0"
django-anymail = {extras = ["mailgun"], version = "^12.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
isort = "^5.13.2"
pytest = "^7.2.2"
django-debug-toolbar = "^5.0.1"
django-browser-reload = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
